SigmaCodebackup3rdSep/objects/Stock_Adjustment_Product__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_Quantity__c</fullName>
        <label>Adjusted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ILPLI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILPLI</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Stock Adjustment Products</relationshipLabel>
        <relationshipName>Stock_Adjustment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Stock Adjustment Products</relationshipLabel>
        <relationshipName>Stock_Adjustment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSN</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Stock Adjustment Products</relationshipLabel>
        <relationshipName>Stock_Adjustment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Adjustment Products</relationshipLabel>
        <relationshipName>Stock_Adjustment_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Adjustment__c</fullName>
        <label>Stock Adjustment</label>
        <referenceTo>StockAdjustment__c</referenceTo>
        <relationshipLabel>Stock Adjustment Products</relationshipLabel>
        <relationshipName>Stock_Adjustment_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Stock Adjustment Product</label>
    <nameField>
        <displayFormat>SAP-{00000}</displayFormat>
        <label>Stock Adjustment Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Adjustment Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>